additional section added

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     </header>
     <!-- ----------header end----------- -->
 
-    <main class="container">
+    <main class="">
         <!-- ----------Channel-Review Begin---------  -->
-        <section class="my-5">
+        <section class="my-5 container">
             <div class="text-center mb-5">
                 <h1 class="fw-bold mb-3">
                     Our Channels Review
@@ -187,12 +187,106 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
+            </div>
+            <div class="pt-5 text-center">
+                <button class="btn text-light bg-primary fw-normal p-2">
+                    Reveal all channels
+                </button>
             </div>
         </section>
         <!-- -----------Channel-Review End---------- -->
+
+        <!-- -------Redefining Product Features Begin-------- -->
+        <section class="container">
+            <div class="w-75 text-center mx-auto">
+                <h2 class="">
+                    Redefining Product Features
+                </h2>
+                <p>
+                    Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive
+                    convergence on cross-platform integration.
+                </p>
+            </div>
+            <div class="row my-5 ">
+                <div class="col-lg-6 d-flex align-items-center ">
+                    <div class="my-5 text-responsive">
+                        <h6 class="text-primary ">
+                            1% OF THE INDUSTRY
+                        </h6>
+                        <h3 class="">
+                            Demonstrate branding consequently think outside the
+                            box and beyond.
+                        </h3>
+                        <p class="">
+                            Velit purus egestas tellus phasellus. Mattis eget sed faucibus magna vulputate pellentesque
+                            a diam tincidunt. Aenean malesuada tellus tellus faucibus mauris quisque mauris in.
+                        </p>
+                        <button class="text-light bg-primary btn">
+                            Start now
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img style="height:60vh ;" class="img-fluid" src="images/Right.png" alt="">
+                </div>
+            </div>
+            <div class="row my-5 ">
+                <div class="col-lg-6 d-flex align-items-center">
+                    <div class="me-5  text-responsive">
+                        <h3 class="">
+                            Demonstrate branding consequently think outside
+                        </h3>
+                        <p class="">
+                            Velit purus egestas tellus phasellus. Mattis eget sed faucibus magna vulputate pellentesque
+                            a diam tincidunt. Aenean malesuada tellus tellus faucibus mauris quisque mauris in.
+                        </p>
+                        <div>
+                            <p><img src="images/Icon arrow.png" alt=""> Enterprise-grade
+                                security</p>
+                            <p><img src="images/Icon arrow.png" alt=""> 99.9% guaranteed uptime SLA</p>
+                            <p><img src="images/Icon arrow.png" alt=""> Designated customer success team</p>
+                        </div>
+                        <button class="text-light bg-primary btn">
+                            Start now
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-6 mt-5 mt-lg-0">
+                    <img style="height:60vh ;" class="img-fluid w-lg-75 " src="images/Photo.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- -------Redefining Product Features End--------- -->
+        <section class="bg-primary">
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-lg">
+                        <img class="demo-responsive" src="images/demonstration.png" alt="">
+                    </div>
+                    <div class="col-lg">
+                        <div class="  text-responsive  ">
+                            <h6 class="text-light mt-md-5">
+                                1% OF THE INDUSTRY
+                            </h6>
+                            <h3 class="text-light">
+                                Demonstrate branding consequently think outside the
+                                box and beyond.
+                            </h3>
+                            <p style="color:#B1CCFB;">
+                                Velit purus egestas tellus phasellus. Mattis eget sed faucibus magna vulputate
+                                pellentesque
+                                a diam tincidunt. Aenean malesuada tellus tellus faucibus mauris quisque mauris in.
+                            </p>
+                            <button class="text-light btn" style="background-color:rgba(16, 24, 40, 0.04) ">
+                                Start now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
 
 
