latest Blog Post added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="col">
                         <div class="border border-1 rounded p-4">
                             <div class="d-flex justify-content-between mb-4">
-                                <img src="images/Icon.png" alt="">
+                                <img src="images/icon2.png" alt="">
                                 <button class="btn border border-1 rounded fw-semibold ">Show more</button>
                             </div>
                             <div>
@@ -126,7 +126,7 @@
                     <div class="col">
                         <div class="border border-1 rounded p-4">
                             <div class="d-flex justify-content-between mb-4">
-                                <img src="images/Icon.png" alt="">
+                                <img class="" src="images/Icon3.png" alt="">
                                 <button class="btn border border-1 rounded fw-semibold ">Show more</button>
                             </div>
                             <div>
@@ -142,7 +142,7 @@
                     <div class="col">
                         <div class="border border-1 rounded p-4">
                             <div class="d-flex justify-content-between mb-4">
-                                <img src="images/Icon.png" alt="">
+                                <img src="images/Icon4.png" alt="">
                                 <button class="btn border border-1 rounded fw-semibold ">Show more</button>
                             </div>
                             <div>
@@ -158,7 +158,7 @@
                     <div class="col">
                         <div class="border border-1 rounded p-4">
                             <div class="d-flex justify-content-between mb-4">
-                                <img src="images/Icon.png" alt="">
+                                <img src="images/Icon5.png" alt="">
                                 <button class="btn border border-1 rounded fw-semibold ">Show more</button>
                             </div>
                             <div>
@@ -174,7 +174,7 @@
                     <div class="col">
                         <div class="border border-1 rounded p-4">
                             <div class="d-flex justify-content-between mb-4">
-                                <img src="images/Icon.png" alt="">
+                                <img src="images/Icon6.png" alt="">
                                 <button class="btn border border-1 rounded fw-semibold ">Show more</button>
                             </div>
                             <div>
@@ -258,15 +258,17 @@
             </div>
         </section>
         <!-- -------Redefining Product Features End--------- -->
+
+        <!-- --------Demo Begin--------------- -->
         <section class="bg-primary">
             <div class="container py-5">
-                <div class="row">
+                <div class="row ">
                     <div class="col-lg">
                         <img class="demo-responsive" src="images/demonstration.png" alt="">
                     </div>
                     <div class="col-lg">
                         <div class="  text-responsive  ">
-                            <h6 class="text-light mt-md-5">
+                            <h6 class="text-light mt-3">
                                 1% OF THE INDUSTRY
                             </h6>
                             <h3 class="text-light">
@@ -285,8 +287,88 @@
                     </div>
                 </div>
             </div>
-
         </section>
+        <!-- --------Demo End--------------- -->
+
+        <!-- ------------Latest Blog Post Begin----------- -->
+        <section class="container">
+            <div class="text-center my-5 w-70 mx-auto">
+                <h1>
+                    Latest Blog Posts
+                </h1>
+                <p>
+                    Completely synergize resource taxing relationships via premier niche markets. Professionally
+                    cultivate
+                    one-to-one customer service with robust ideas.
+                </p>
+            </div>
+            <div class="row  mb-5">
+                <div class="col-lg responsive-card mb-4 mb-lg-0">
+                    <div class="border rounded-3">
+                        <img src="Images/organize.png" class="card-img-top rounded-top" alt="...">
+                        <div class="card-body p-3">
+                            <div class="d-flex align-items-center my-2">
+                                <button class="btn bg-primary-subtle text-primary fw-semibold">Article</button>
+                                <!-- <p>25 Apr. 2022</p> -->
+                            </div>
+
+                            <h5 class="card-title my-2">Organize your digital assets
+                                with a new methodology.</h5>
+                            <p class="card-text">Leverage agile frameworks to provide a robust synopsis for high level
+                                overviews. Iterative approaches to corporate.</p>
+                            <a class="" style="text-decoration: none;" href="#">Learn more <img class="ms-2"
+                                    src="images/arrow.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg responsive-card mb-4 mb-lg-0">
+                    <div class="border rounded-3">
+                        <img src="Images/faster.png" class="card-img-top rounded-top" alt="...">
+                        <div class="card-body p-3">
+                            <div class="d-flex align-items-center my-2">
+                                <button class="btn bg-primary-subtle text-primary fw-semibold">Article</button>
+                                <!-- <p>25 Apr. 2022</p> -->
+                            </div>
+
+                            <h5 class="card-title my-2">Organize your digital assets
+                                with a new methodology.</h5>
+                            <p class="card-text">Leverage agile frameworks to provide a robust synopsis for high level
+                                overviews. Iterative approaches to corporate.</p>
+                            <a class="" style="text-decoration: none;" href="#">Learn more <img class="ms-2"
+                                    src="images/arrow.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg responsive-card mt-md-3 mt-lg-0 mb-4 mb-lg-0">
+                    <div class="border rounded-3">
+                        <img src="Images/gestalt.png" class="card-img-top rounded-top" alt="...">
+                        <div class="card-body p-3">
+                            <div class="d-flex align-items-center my-2">
+                                <button class="btn bg-primary-subtle text-primary fw-semibold">Article</button>
+                                <!-- <p>25 Apr. 2022</p> -->
+                            </div>
+
+                            <h5 class="card-title my-2">Organize your digital assets
+                                with a new methodology.</h5>
+                            <p class="card-text">Leverage agile frameworks to provide a robust synopsis for high level
+                                overviews. Iterative approaches to corporate.</p>
+                            <a class="" style="text-decoration: none;" href="#">Learn more <img class="ms-2"
+                                    src="images/arrow.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ------------Latest Blog Post End----------- -->
+        <!-- -------What Our Customers Say Begin------------- -->
+        <section class="container">
+            <div class="text-center my-5 title-w-70 mx-auto">
+                <h1>What Our Customers Say</h1>
+                <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and
+                    empowerment. Bring to the table win-win strategies to ensure domination.</p>
+            </div>
+        </section>
+        <!-- --- -------What Our Customers Say End------------- -->
     </main>
 
 
