--- a/index.html
+++ b/index.html
@@ -367,7 +367,35 @@
                 <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and
                     empowerment. Bring to the table win-win strategies to ensure domination.</p>
             </div>
+            <div class="row text-center mx-auto mb-5">
+                <div class="col ">
+                    <div class="customers-say mx-auto">
+                        <img src="images/customer1.png" alt="">
+                        <img style="margin-left: -20px;" src="images/customer2.png" alt="">
+                        <img style="margin-left: -20px;" src="images/customer3.png" alt="">
+                        <img style="margin-left: -20px;" src="images/customer4.png" alt="">
+                        <p class="mt-3">Repurpose analytics with the possibility to come</p>
+                    </div>
+                </div>
+                <div class="col ">
+                    <div class="customers-say mx-auto">
+                        <img src="images/star-icon.png" alt="">
+                        <img src="images/star-icon.png" alt="">
+                        <img src="images/star-icon.png" alt="">
+                        <img src="images/star-icon.png" alt="">
+                        <img src="images/clear-star.png" alt="">
+                        <p class="mt-3">5 out of 5 stars from 123 reviews from our users</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="customers-say mx-auto">
+                        <img src="images/repurpose.png" alt="">
+                        <p class="mt-3">Repurpose analytics with the possibility to come up.</p>
+                    </div>
+                </div>
+            </div>
         </section>
+
         <!-- --- -------What Our Customers Say End------------- -->
     </main>
 
