Footer section added

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="col">
                         <div class="border border-1 rounded p-4">
                             <div class="d-flex justify-content-between mb-4">
-                                <img src="images/Icon.png" alt="">
+                                <img src="images/wireless-icon.png" alt="">
                                 <button class="btn border border-1 rounded fw-semibold ">Show more</button>
                             </div>
                             <div>
@@ -368,7 +368,7 @@
                     empowerment. Bring to the table win-win strategies to ensure domination.</p>
             </div>
             <div class="row text-center mx-auto mb-5">
-                <div class="col ">
+                <div class="col-lg col-sm">
                     <div class="customers-say mx-auto">
                         <img src="images/customer1.png" alt="">
                         <img style="margin-left: -20px;" src="images/customer2.png" alt="">
@@ -377,7 +377,7 @@
                         <p class="mt-3">Repurpose analytics with the possibility to come</p>
                     </div>
                 </div>
-                <div class="col ">
+                <div class="col-lg col-sm">
                     <div class="customers-say mx-auto">
                         <img src="images/star-icon.png" alt="">
                         <img src="images/star-icon.png" alt="">
@@ -387,7 +387,7 @@
                         <p class="mt-3">5 out of 5 stars from 123 reviews from our users</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg col-sm">
                     <div class="customers-say mx-auto">
                         <img src="images/repurpose.png" alt="">
                         <p class="mt-3">Repurpose analytics with the possibility to come up.</p>
@@ -395,8 +395,83 @@
                 </div>
             </div>
         </section>
-
         <!-- --- -------What Our Customers Say End------------- -->
+
+        <!-- ---------------Welcome to New Digital Start----------- -->
+        <section class="container">
+            <div class="row p-5" style="background-color: #F8F9FB;">
+                <div class="col">
+                    <div class="w-80">
+                        <h6>
+                            1% OF THE INDUSTRY
+                        </h6>
+                        <h3 class="">
+                            Welcome to your new digital reality that will rock your world.
+                        </h3>
+                    </div>
+
+                </div>
+                <div class=" col pt-4 ms-3">
+                    <input class="col w-75 py-2 ps-2 border rounded-start" style="outline: none;"
+                        placeholder="Enter your email" type="text">
+                    <button class=" border-0 p-2 ps-2 pe-3 bg-primary text-light rounded-end "
+                        style="margin:-10px">Submit
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- ---------------Welcome to New Digital End----------- -->
+        <footer class="container my-5">
+            <div class="row mb-5">
+                <div class="col pe-5">
+                    <img src="images/Lookscout.png" alt="">
+                    <p class="mt-3">
+                        Generate outside the box thinking with the possibility to targtet the low.
+                    </p>
+                    <div>
+                        <img class="bg-dark px-2 py-1 me-2" style="border-radius: 100%; width: 25px;"
+                            src="images/fb-icon.png" alt="">
+                        <img class="me-2" src="images/google-icon.png" alt="">
+                        <img class="me-2" src="images/apple-icon.png" alt="">
+                        <img src="images/loading-icon.png" alt="">
+                    </div>
+                </div>
+                <div class="col ms-5">
+                    <h5>Products</h5>
+                    <p>Features</p>
+                    <p>Solutions</p>
+                    <p>Integrations</p>
+                    <p>Enterprise</p>
+                    <p>Solutions</p>
+                </div>
+                <div class="col ms-5">
+                    <h5>Resources</h5>
+                    <p>Partners</p>
+                    <p>Community</p>
+                    <p>Developers</p>
+                    <p>App</p>
+                    <p>Blog</p>
+                </div>
+                <div class="col ms-5">
+                    <h5>Why Choose Us?</h5>
+                    <p>Channels</p>
+                    <p>Scale</p>
+                    <p>Watch the Demo</p>
+                    <p>Our Competition</p>
+                </div>
+                <div class="col ms-5">
+                    <h5>Company</h5>
+                    <p>About Us</p>
+                    <p>News</p>
+                    <p>Leadership</p>
+                    <p>Media Kit</p>
+                </div>
+            </div>
+            <div class="text-center">
+                <img class="pb-4" src="images/blue-icon.png" alt="">
+                <p>© 2023 Lookscout. All Rights Reserved.</p>
+            </div>
+        </footer>
     </main>
 
 
