--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                     one-to-one customer service with robust ideas.
                 </p>
             </div>
-            <div class="row  mb-5">
-                <div class="col-lg responsive-card mb-4 mb-lg-0">
+            <div class="row row-cols-lg-3 row-cols-sm-2 row-cols-1 g-4 mb-5">
+                <div class="col">
                     <div class="border rounded-3">
                         <img src="Images/organize.png" class="card-img-top rounded-top" alt="...">
                         <div class="card-body p-3">
@@ -321,7 +321,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg responsive-card mb-4 mb-lg-0">
+                <div class="col">
                     <div class="border rounded-3">
                         <img src="Images/faster.png" class="card-img-top rounded-top" alt="...">
                         <div class="card-body p-3">
@@ -339,7 +339,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg responsive-card mt-md-3 mt-lg-0 mb-4 mb-lg-0">
+                <div class="col">
                     <div class="border rounded-3">
                         <img src="Images/gestalt.png" class="card-img-top rounded-top" alt="...">
                         <div class="card-body p-3">
@@ -399,9 +399,9 @@
 
         <!-- ---------------Welcome to New Digital Start----------- -->
         <section class="container">
-            <div class="row p-5" style="background-color: #F8F9FB;">
+            <div class="row row-cols-lg-2 row-cols-1 p-5 align-items-center g-4" style="background-color: #F8F9FB;">
                 <div class="col">
-                    <div class="w-80">
+                    <div class="">
                         <h6>
                             1% OF THE INDUSTRY
                         </h6>
@@ -409,21 +409,24 @@
                             Welcome to your new digital reality that will rock your world.
                         </h3>
                     </div>
-
                 </div>
-                <div class=" col pt-4 ms-3">
-                    <input class="col w-75 py-2 ps-2 border rounded-start" style="outline: none;"
-                        placeholder="Enter your email" type="text">
-                    <button class=" border-0 p-2 ps-2 pe-3 bg-primary text-light rounded-end "
-                        style="margin:-10px">Submit
-                    </button>
+                <div class="col">
+                    <div class="w-100 d-sm-block d-flex flex-column">
+                        <input class="w-75 email-field p-2 border rounded-start" style="outline: none;"
+                            placeholder="Enter your email" type="text">
+                        <button class="w-25 send-btn border-0 p-2 bg-primary text-light rounded-end "
+                            style="margin:-10px">Submit
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- ---------------Welcome to New Digital End----------- -->
-        <footer class="container my-5">
-            <div class="row mb-5">
-                <div class="col pe-5">
+    </main>
+
+    <footer class="container my-5">
+        <div class="row row-cols-lg-5 row-cols-sm-3 row-cols-2  mb-5">
+            <div class="col-lg col-sm-8 col-12">
+                <div class="pe-5">
                     <img src="images/Lookscout.png" alt="">
                     <p class="mt-3">
                         Generate outside the box thinking with the possibility to targtet the low.
@@ -436,7 +439,9 @@
                         <img src="images/loading-icon.png" alt="">
                     </div>
                 </div>
-                <div class="col ms-5">
+            </div>
+            <div class="col">
+                <div class="">
                     <h5>Products</h5>
                     <p>Features</p>
                     <p>Solutions</p>
@@ -444,7 +449,9 @@
                     <p>Enterprise</p>
                     <p>Solutions</p>
                 </div>
-                <div class="col ms-5">
+            </div>
+            <div class="col">
+                <div>
                     <h5>Resources</h5>
                     <p>Partners</p>
                     <p>Community</p>
@@ -452,14 +459,18 @@
                     <p>App</p>
                     <p>Blog</p>
                 </div>
-                <div class="col ms-5">
+            </div>
+            <div class="col">
+                <div>
                     <h5>Why Choose Us?</h5>
                     <p>Channels</p>
                     <p>Scale</p>
                     <p>Watch the Demo</p>
                     <p>Our Competition</p>
                 </div>
-                <div class="col ms-5">
+            </div>
+            <div class="col">
+                <div>
                     <h5>Company</h5>
                     <p>About Us</p>
                     <p>News</p>
@@ -467,12 +478,12 @@
                     <p>Media Kit</p>
                 </div>
             </div>
-            <div class="text-center">
-                <img class="pb-4" src="images/blue-icon.png" alt="">
-                <p>© 2023 Lookscout. All Rights Reserved.</p>
-            </div>
-        </footer>
-    </main>
+        </div>
+        <div class="text-center">
+            <img class="pb-4" src="images/blue-icon.png" alt="">
+            <p>© 2023 Lookscout. All Rights Reserved.</p>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
